--- a/5.2/PlatformSample/UIInteraction/Config/DefaultGame.ini
+++ b/5.2/PlatformSample/UIInteraction/Config/DefaultGame.ini
@@ -5,6 +5,6 @@ ProjectID=5C7BB49B418F71BE149A9384E9761B53
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BlueprintNativizationMethod=Disabled
-BuildConfiguration=PPBC_Shipping
-ForDistribution=True
+BuildConfiguration=PPBC_Development
+ForDistribution=False
 
